--- a/GymVault/templates/shop/home.html
+++ b/GymVault/templates/shop/home.html
@@ -20,6 +20,7 @@
         <a href="view_pro"><i class="fas fa-eye"></i><span>View Supplements</span></a>
         <a href="view_eqp"><i class="fas fa-search"></i><span>View Equipment</span></a>
         <a href="order_admin"><i class="fas fa-search"></i><span>Order History</span></a>
+        <a href="add_stock"><i class="fas fa-search"></i><span>update stock</span></a>
         <a href="logout"><i class="fas fa-sign-out-alt"></i><span>Logout</span></a>
     </div>
 
@@ -71,5 +72,11 @@
             </div>
         </div>
     </div>
+
+    <script>
+        function toggleSidebar() {
+            document.querySelector('.sidebar').classList.toggle('active');
+        }
+    </script>
 </body>
 </html>
