--- a/GymVault/templates/user/buy.html
+++ b/GymVault/templates/user/buy.html
@@ -66,7 +66,7 @@
               <!-- Logout (Visible when the user is logged in) -->
               {% if user.is_authenticated %}
                 <li class="nav-item">
-                  <a class="nav-link" href="logout">Logout</a>
+                  <a class="nav-link" href="../../logout">Logout</a>
                 </li>
               {% else %}
                 <li class="nav-item">
