--- a/GymVault/templates/user/equipments.html
+++ b/GymVault/templates/user/equipments.html
@@ -71,7 +71,7 @@
                 </li>
               {% else %}
                 <li class="nav-item">
-                  <a class="nav-link" href="/login">Login</a>
+                  <a class="nav-link" href="../login">Login</a>
                 </li>
               {% endif %}
             </ul>
