--- a/GymVault/templates/user/history.html
+++ b/GymVault/templates/user/history.html
@@ -47,11 +47,11 @@
               
               <!-- Contact Us -->
               <li class="nav-item">
-                <a class="nav-link" href="/contact">Contact Us</a>
+                <a class="nav-link" href="../contact">Contact Us</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="/order">Order History</a>
+                <a class="nav-link" href="../order">Order History</a>
               </li>
               
               <!-- Search Bar -->
@@ -65,7 +65,7 @@
               <!-- Logout (Visible when the user is logged in) -->
               {% if user.is_authenticated %}
                 <li class="nav-item">
-                  <a class="nav-link" href="logout">Logout</a>
+                  <a class="nav-link" href="../logout">Logout</a>
                 </li>
               {% else %}
                 <li class="nav-item">
